--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/f42adaafe8.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
@@ -49,7 +49,7 @@
 
     <section class="mon-parcours" id="parcour">
         <div class="principal">
-            <img src="image/Moi.jpg" alt="photo de ma personne">
+            <img src="image/index/Moi.jpg" alt="photo de ma personne">
             <article class="texte-parcours">
                 <h2>Mon parcours</h2>
                 <p class="sous-titre">Futur développeur</p>
@@ -84,7 +84,7 @@
                 <div class="pra">
                     <p>Historique de mes codages</p>
                     <p style="text-align: center;">
-                        <a class="boutton" href="codage.html">En savoir plus</a>
+                        <a class="boutton" href="page1.html">En savoir plus</a>
                     </p>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="pra">
                     <p>Les projets, auquelles j'ai participé</p>
                     <p style="text-align: center;">
-                        <a class="boutton" href="Projet.html">En savoir plus</a>
+                        <a class="boutton" href="page2.html">En savoir plus</a>
                     </p>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 <div class="pra">
                     <p>Prototype, Création , Logo.. </p>
                     <p style="text-align: center;">
-                        <a class="boutton" href="Design.html"> En savoir plus</a>
+                        <a class="boutton" href="page3.html"> En savoir plus</a>
                     </p>
                 </div>
             </div>
