--- a/page1.html
+++ b/page1.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/f42adaafe8.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="codage.css">
+    <link rel="stylesheet" href="css/page1.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developpement web</title>
@@ -18,7 +18,7 @@
                 <p>de Robin Monteiro</p>
             </div>
             <ul>
-                <li> <a href="Accueil.html">Acceuil</a></li>
+                <li> <a href="index.html">Acceuil</a></li>
             </ul>
         </nav>
     </section>
@@ -40,8 +40,8 @@
         <article class="carte">
 
             <div class="screen">
-                <img src="image/codage/code html.png" alt="codagehtml" class="html">
-                <img src="image/codage/code CSS.png" alt="codagecss" class="css">
+                <img src="image/codage/code html.png" href="https://github.com/Robtothemoon/Portfolio-Robin-Monteiro" alt="codagehtml" class="html">
+                <img src="image/codage/code CSS.png" href="https://github.com/Robtothemoon/Portfolio-Robin-Monteiro" alt="codagecss" class="css">
             </div>
             <div class="description">
                 <h2>Portfolio :</h2>
