--- a/page2.html
+++ b/page2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/f42adaafe8.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Projet.css">
+    <link rel="stylesheet" href="css/page2.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet</title>
@@ -20,7 +20,7 @@
                     <p>de Robin Monteiro</p>
                 </div>
                 <ul>
-                    <li> <a href="Accueil.html">Acceuil</a></li>
+                    <li> <a href="index.html">Acceuil</a></li>
                 </ul>
             </nav>
         </section>
