mise à jour responsive

--- a/page1.html
+++ b/page1.html
@@ -73,7 +73,7 @@
                 <a href="https://github.com/Robtothemoon/Booki/blob/main/index.html"> <img
                         src="image/codage/HTML booki.PNG" alt="codagehtml" class="code"></a>
                 <a href="https://github.com/Robtothemoon/Booki/blob/main/style.css"><img
-                        src="image/codage/CSS BOOKI.PNG" alt="codagecss" class="code"></a>
+                        src="image/codage/CSS BOOKI.PNG" alt="codagecss" class="big"></a>
             </div>
         </article>
 
