changement média querries

--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
                 <p>de Robin Monteiro</p>
             </div>
             <ul>
-                <li> <a href="index.html">Acceuil</a></li>
+                <li> <a href="index.html">Accueil</a></li>
             </ul>
         </nav>
     </section>
@@ -40,8 +40,8 @@
         <article class="carte">
 
             <div class="screen">
-                <img src="image/codage/code html.png" href="https://github.com/Robtothemoon/Portfolio-Robin-Monteiro" alt="codagehtml" class="html">
-                <img src="image/codage/code CSS.png" href="https://github.com/Robtothemoon/Portfolio-Robin-Monteiro" alt="codagecss" class="css">
+                <img src="image/codage/code html.png" href="https://github.com/MonteiroRobin/Portfolio-Robin-Monteiro/blob/main/index.html" alt="codagehtml" class="html">
+                <img src="image/codage/code CSS.png" href="https://github.com/MonteiroRobin/Portfolio-Robin-Monteiro/blob/main/css/style.css" alt="codagecss" class="css">
             </div>
             <div class="description">
                 <h2>Portfolio :</h2>
