--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
                     <p>de Robin Monteiro</p>
                 </div>
                 <ul>
-                    <li> <a href="index.html">Acceuil</a></li>
+                    <li> <a href="index.html">Accueil</a></li>
                 </ul>
             </nav>
         </section>
