--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
 
             </div>
             <ul>
-                <li> <a href="index.html">Acceuil</a></li>
+                <li> <a href="index.html">Accueil</a></li>
             </ul>
         </nav>
 
