--- a/page2.html
+++ b/page2.html
@@ -72,7 +72,7 @@
         </article>
         <article class="carte">
             <div class="screen">
-                <img src="image/projet/Booki.PNG" alt="" class="grande">
+                <img src="image/projet/Booki.png" alt="" class="grande">
 
             </div>
             <div class="description">
